# Replisense-rfq

./: .coverage  .gitignore  Dockerfile  README.md  file_parser.py  pyproject.toml  pytest.ini  requirements.txt
.cache/42/: cache.db
.github/workflows/: ci.yml
app/: file_parser.py  int_main.py  main.py  quote_comparison_agent.py  rfq_agent.py
tests/: test_file_parser.py  test_main.py  test_rfq_agent.py
tests/assets/: attachment.docx
uploads/: email_4 attachment.xlsx  email_5.docx
